# MariHacks2k20

./: README.md  cfgman.py  config.cfg  freq.json  freqtomidi.py  gen.py  graphing.py  info  main.py  pyproject.toml  sample.py
