[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Green-Robot-Dev-Studios <nficara01@gmail.com>"]
description = ""
name = "marihacks"
version = "0.1.0"
[tool.poetry.dependencies]
parselmouth = "^1.1"
python = "^3.7"
seaborn = "^0.10.0"
[tool.poetry.dev-dependencies]
